--- a/package.json
+++ b/package.json
@@ -1,22 +1,52 @@
 {
-  "name": "admin",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite --host 0.0.0.0",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
-  }
+    "name": "admin",
+    "private": true,
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite --host 0.0.0.0",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@ant-design/cssinjs": "^1.7.1",
+        "antd": "^5.4.0",
+        "dayjs": "^1.11.7",
+        "deepmerge": "^4.3.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.57.0",
+        "@typescript-eslint/parser": "^5.57.0",
+        "@vitejs/plugin-react": "^3.1.0",
+        "autoprefixer": "^10.4.14",
+        "eslint": "^8.37.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jest": "^27.2.1",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-unused-imports": "^2.0.0",
+        "jest": "^29.5.0",
+        "postcss": "^8.4.21",
+        "postcss-import": "^15.1.0",
+        "postcss-mixins": "^9.0.4",
+        "postcss-nested": "^6.0.1",
+        "postcss-nesting": "^11.2.2",
+        "prettier": "^2.8.7",
+        "stylelint": "^15.4.0",
+        "stylelint-config-css-modules": "^4.2.0",
+        "stylelint-config-recess-order": "^4.0.0",
+        "stylelint-config-standard": "^32.0.0",
+        "stylelint-prettier": "^3.0.0",
+        "tailwindcss": "^3.3.1",
+        "typescript": "^4.9.3",
+        "vite": "^4.2.0"
+    }
 }
